syntax = "proto2";

package backup;

message WriteRequest {
    required string productName = 1;
    required bytes multiCmd = 2;
    optional int64  updateTime = 3;
    optional uint64 masterOffset = 4;
    optional uint64 slaveOffset = 5;
    optional int32  usedIndex = 6;
    optional int32  cmds = 7;
}

message WriteResponse {
	enum WritingStatus {
		UNKNOWN = 0;
		OK = 1;
		FAIL = 2;
	}
    required WritingStatus status = 1;
    required int32 cmds = 2;
}
